[package]
name = "substreams-evm"
version = "0.1.0"
description = "Substream template demo project"
edition = "2021"
repository = "https://github.com/Akagi201/substreams-evm"
license = "Apache 2.0"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4.3"
ethabi = "18.0.0"
hex-literal = "0.4.1"
prost = "0.11.9"
substreams = "0.5.6"
substreams-ethereum = "0.9.1"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.9", features = ["custom"] }

[build-dependencies]
anyhow = "1.0.71"
substreams-ethereum = "0.9.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
